--- a/packages/design-system/src/components/main.css
+++ b/packages/design-system/src/components/main.css
@@ -1,1 +1,10 @@
-@import './00-foundation/index';
+/* @import './00-foundation/index'; */
+
+:root {
+  --c-primary: orange;
+}
+
+.foo {
+  display: flex;
+  gap: 20px;
+}
