Add colours and link styles

--- a/packages/design-system/src/components/00-foundation/00-utils/_05-variables.scss
+++ b/packages/design-system/src/components/00-foundation/00-utils/_05-variables.scss
@@ -28,3 +28,12 @@ $scale-200: modular-scale(0);
 $scale-300: modular-scale(1);
 $scale-400: modular-scale(2);
 $scale-500: modular-scale(3);
+
+///
+/// #COLOURS
+///
+$cerulean: #00819e;
+$off-black: #323232;
+
+$c-body-text: $off-black;
+$c-primary: $cerulean;
