Include formatter and link styles.

--- a/packages/design-system/src/components/05-base/00-typography/_index.scss
+++ b/packages/design-system/src/components/05-base/00-typography/_index.scss
@@ -1,2 +1,4 @@
 @import './00-paragraphs/00-paragraphs';
 @import './05-headings/05-headings';
+@import './10-formatters/10-formatters';
+@import './15-links/15-links';
