--- a/packages/design-system/src/components/00-foundation/00-utils/_05-variables.scss
+++ b/packages/design-system/src/components/00-foundation/00-utils/_05-variables.scss
@@ -23,6 +23,7 @@ $bourbon: (
 /// #TYPOGRAPHY
 ///
 $f-family-raleway: 'Raleway', $font-stack-helvetica;
+$f-family-londrina: 'Londrina Solid', $f-family-raleway;
 $scale-100: modular-scale(-1);
 $scale-200: modular-scale(0);
 $scale-300: modular-scale(1);
