--- a/packages/design-system/src/components/fractal/_preview.twig
+++ b/packages/design-system/src/components/fractal/_preview.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Preview</title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,700,700i&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Londrina+Solid|Raleway:400,400i,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href={{ '/assets/styles/main.css' | path}} />
 </head>
 <body>
