Add figcaption styles

--- a/packages/design-system/src/components/05-base/00-typography/_index.scss
+++ b/packages/design-system/src/components/05-base/00-typography/_index.scss
@@ -2,3 +2,4 @@
 @import './05-headings/05-headings';
 @import './10-formatters/10-formatters';
 @import './15-links/15-links';
+@import './25-figcaption/25-figcaption';
